--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="show-sum">Sum = XX</h1>
+    <h1 class="show-sum">Counter = XX</h1>
     <button class="btn-add">Add Counter</button>
     <div id="root"></div>
     <script src="./main.js"></script>
